--- a/templates/book/index.html
+++ b/templates/book/index.html
@@ -1,12 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Booking</title>
-</head>
-<body>
-    {% block body %}
-    {% endblock %}
-</body>
-</html>
+{% extends "book/base.html" %}
+{% block body %}
+<p>Index</p>
+{% endblock %}
